Removing CDF line from Dockerfiles

--- a/ubuntu-14.04_docker/Dockerfile
+++ b/ubuntu-14.04_docker/Dockerfile
@@ -19,5 +19,5 @@ RUN cd /root && tar -xf cdf36_3_1-dist-all.tar.gz
 RUN cd /root/cdf36_3-dist && make clean && make OS=linux ENV=gnu all && make INSTALLDIR=/usr/local/cdf install
 
 RUN cd /root && git clone https://github.com/SuperDARN/rst.git
-RUN printf "export RSTPATH=/root/rst\n. \$RSTPATH/.profile.bash\nunset DLMPATH\nexport CDF_PATH=/usr/local/cdf" >> /root/.bashrc
+RUN printf "export RSTPATH=/root/rst\n. \$RSTPATH/.profile.bash" >> /root/.bashrc
 #RUN rm -rf /root/rst/codebase/superdarn/src.lib/tk/idl
